syntax = "proto3";

package vn.grpc.nodejs.user_auth.service;

service AuthService {
  rpc signIn (LoginDTO) returns (BaseResponse) {}
  rpc validateToken (ValidateTokenDTO) returns (BaseResponse) {}
  rpc refreshToken (Empty) returns (BaseResponse) {}
  rpc googleLogin (GoogleLoginDTO) returns (BaseResponse) {}
}

message Empty {}

message GoogleLoginDTO {
  string email = 1;
  string token = 2;
}


message LoginDTO {
  string email = 1;
  string password = 2;
}

message ValidateTokenDTO {
  string accessToken = 1;
  string refreshToken = 2;
}

message BaseResponse {
  int32 status = 1;
  string message = 2;
  tokenResponse data = 3;
}

message tokenResponse{
  string accessToken = 1;
  string refreshToken = 2; 
  string accessTokenExpires = 3; 
  int32 isRefresh = 4;

}

